# auroraOS

./: .config  .config.old  .gitignore  BUG_REPORT.md  CMakeLists.miband.txt  CMakeLists.txt  Dockerfile  Kconfig  Kconfig.miband  README.md  boot.S  elf_loader.cpp  interrupts.cpp  kernel.cpp  linker.ld  memory.hpp  msg_queue.hpp  ramfs.cpp  requirements.txt  research_plan_auroraOS_project_analysis.md  research_report_auroraOS_analysis.md  semaphore.hpp  shell.cpp  start_env.bat  task.hpp  toolchain.cmake  uart.c  uart.h  vfs.cpp  vfs.hpp
.github/workflows/: build.yml
.mimocode/: .cron-lock
adapter/net/: ethernetif.cpp  lwipopts.h  sys_arch.cpp
adapter/net/arch/: cc.h  sys_arch.h
ai/: intent_engine.hpp
apps/: camera_app.cpp  elf.hpp  elf_loader.cpp  elf_loader.hpp  kernel.cpp  lua_ui_binding.cpp  lua_ui_binding.hpp  m0plus_main.cpp  mini_program_engine.hpp  net_app.cpp  net_app.hpp  notification_center.hpp  sandbox_test_app.cpp  shell.cpp  shell.hpp
apps/nfc/: nfc_service.hpp
apps/watch/: font_engine.hpp  miband_kernel.hpp  miband_main.cpp  watch_app.cpp  watch_app.hpp
apps/watch/screens/: dynamic_watch_face_screen.hpp  watch_face_store_screen.hpp
arch/arm/cortex-a/aarch64/: arch_impl.hpp  boot.S  exceptions.S
arch/arm/cortex-a/gic/: gic.cpp  gic.hpp
arch/arm/cortex-a/mmu/: mmu_manager.cpp  mmu_manager.hpp  mmu_pte.hpp
arch/arm/cortex-m/cm0plus/: arch_impl.hpp  boot.S
arch/arm/cortex-m/cm4/: arch_impl.hpp
arch/arm/cortex-m/cm4f/: arch_impl.hpp  context_switch.S
arch/riscv/rv32imac/: arch_impl.hpp  boot.S  trap.cpp  trap_vector.S
boards/qemu/rv32_virt/: board.h
boards/st/nucleo-l031k6/: board.h
boards/ti/lm3s6965-qb/: board.h
boards/xiaomi/miband8/: board.h
boot/: boot.S  interrupts.cpp  interrupts.hpp  uart.c  uart.h
bootloader/: boot_main.cpp  bootloader_boot.S
build_m0plus/: kernel_test.s
config/: autoconf.h  config.h  linker.ld  linker_bootloader.ld  linker_m0plus.ld  linker_miband.ld  linker_qemu.ld  linker_rv32.ld  net_config.h  toolchain.cmake  toolchain_rv32.cmake
drivers/camera/: camera_device.hpp  dummy_camera.cpp  dummy_camera.hpp
drivers/display/: framebuffer.hpp  oled_driver.hpp  renderer2d.hpp  st7789_driver.hpp
drivers/input/: gesture_recognizer.hpp  input_event.hpp  touch_driver.hpp
drivers/nfc/: nfc_controller.hpp
drivers/power/: charging_manager.hpp
drivers/sensor/: health_algo.hpp  sensor_framework.hpp
drivers/storage/: flash_device.hpp
drivers/usb/: usb_core.hpp
drivers/watchdog/: lm3s_wdt.hpp  soft_wdt.hpp  watchdog.hpp
guix/: compositor.cpp  compositor.hpp  window.cpp  window.hpp
kernel/: app_lifecycle.hpp  arch_api.hpp  cspace.hpp  device.hpp  firmware_header.hpp  frame_scheduler.hpp  frame_scheduler_v2.hpp  ipc.cpp  ipc.hpp  libc.cpp  memory.cpp  memory.hpp  memory_pool.hpp  mpu.hpp  msg_queue.hpp  mutex.hpp  mutex_pi.hpp  ota.cpp  ota.hpp  page_allocator.hpp  posix.cpp  posix.hpp  power_manager.hpp  semaphore.hpp  signal.hpp  stdlib.h  symbol_export.cpp  symbol_export.hpp  syscalls.c  task.hpp  task_notify.hpp  timer.hpp  uart_device.hpp  vasp.hpp  watchdog_manager.hpp  watchdog_stub.cpp  work_queue.hpp
kernel/power/: power_manager.hpp
metrics/: latency_recorder.hpp  metrics.cpp  metrics.hpp  power_profiler.hpp
net/: device_route_table.hpp  distributed_bus.hpp  eth_driver.cpp  eth_driver.hpp  net_device.hpp
net/ble/: ble_signature.hpp  ble_stack.hpp
scripts/: build_image.py  genconfig.py  hil_runner.py  menuconfig.bat  parse_metrics.py  run_qemu.sh
syscall/: syscall.hpp
tests/: CMakeLists.txt
tests/integration/: test_system_boot.cpp
tests/stress/: test_oom_stress.cpp
tests/stubs/: arch_impl.hpp  host_prelude.hpp  kernel_stubs.cpp  mutex.hpp
tests/unit/: debug_test.cpp  test_ble_signature.cpp  test_camera_usb_arch.cpp  test_dynamic_watch_face.cpp  test_elf_loader.cpp  test_firmware_header.cpp  test_guix_compositor.cpp  test_health_algo.cpp  test_ipc.cpp  test_ipc_typed.cpp  test_lua_ui.cpp  test_lua_vm.cpp  test_memory.cpp  test_memory_pool.cpp  test_mmu_manager.cpp  test_mmu_pte.cpp  test_mutex.cpp  test_nfc_service.cpp  test_notification_center.cpp  test_page_allocator.cpp  test_power.cpp  test_procfs.cpp  test_scheduler.cpp  test_softbus_security.cpp
ui/: complications.hpp  screen_navigator.hpp  view.hpp
utils/: hmac_sha256.hpp  json_parser.hpp
vfs/: littlefs_vnode.hpp  photon_cache.hpp  procfs.hpp  ramfs.cpp  ramfs.hpp  softbus.cpp  softbus.hpp  vfs.cpp  vfs.hpp
